--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-qr-code": "^2.0.15",
+    "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
